<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg"
    tools:context=".FilterPopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8sp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/finishTV"
            style="@style/MainTextPopUp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/spersonalizuj_list" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/finishSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="160sp"
            android:text="@string/uko_czone"
             />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/unfinishSW"
            android:layout_height="wrap_content"
            android:layout_width="160sp"
            style="@style/SwitchControls"
            android:text="@string/nieuko_czonone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            style="@style/InsideText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/kategorie" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="20sp"
                android:gravity="center_vertical"
                android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/filmsCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filmy"
                android:gravity="center"
                android:checked="true"
                style="@style/MainDesignControls" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/seriesCB"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/seriale"
                    android:checked="true"
                    style="@style/MainDesignControls" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/booksCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/MainDesignControls"
                    android:checked="true"
                    android:text="@string/ksiazki" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/gamesCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MainDesignControls"
                    android:gravity="center"

                    android:checked="true"
                    android:text="@string/gry" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/allCB"
            style="@style/SwitchControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/zaznacz_wszystko" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView5"
            style="@style/InsideText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/polecane" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:layout_weight="1"
        android:paddingEnd="5dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/rockSW"
            android:minWidth="80sp"

            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:text="@string/rock" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/borysSW"
            style="@style/SwitchControls"
            android:minWidth="80sp"

            android:layout_height="wrap_content"
            android:text="@string/borys" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/rockBorysSW"
            android:minWidth="80sp"

            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:text="@string/rck_brs" />
    </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/otherSW"
                style="@style/SwitchControls"
                android:minWidth="80sp"
                android:layout_height="wrap_content"
                android:text="@string/inne" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/allSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="175sp"
            android:checked="true"
            android:text="@string/zaznacz_wszystko" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/defaultFilterButton"
                style="@style/ButtonFinalDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/domy_lne" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveFilterButton"
                style="@style/ButtonFinalDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="3"
                android:background="@drawable/btn_bg"
                android:text="@string/save" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>